<resources>
    <string name="questionText">Question</string>
    <string name="textAnswer1">answer_1</string>
    <string name="textAnswer2">answer_2</string>
    <string name="textAnswer3">answer_3</string>
    <string name="textAnswer4">answer_4</string>
    <string name="pointsDefault" translatable="false">0</string>
    <string name="pointsSetText" translatable="false">%d</string>
    <string name="currentPoints">Points left: %d</string>
    <string name="gameName">Ten Millions</string>
    <string name="play_button">Play</string>
    <string name="submit_answer">Submit</string>
    <string name="records_button">Records</string>
    <string name="score_text">Your Score: %d</string>
    <string name="score_save_button">Save Result</string>
    <string name="username_hint">Your name…</string>
    <string name="top_10_records">TOP-10</string>
    <string name="back">Menu</string>
    <string name="score_menu_button">Menu</string>
    <string name="appName">Ten Millions</string>
    <string name="timerText">%s seconds left</string>
    <string name="empty_username">Enter a nickname</string>
    <string name="username_exists">Username already exists</string>

</resources>