<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.game.GameFragment">

        <Button
            android:id="@+id/submitAnswerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:enabled="false"
            android:text="@string/submit_answer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/answer3text"
            android:layout_width="138dp"
            android:layout_height="43dp"
            android:layout_marginBottom="12dp"
            android:text="@string/textAnswer3"
            app:layout_constraintBottom_toTopOf="@+id/answer4text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/answer1text"
            android:layout_width="138dp"
            android:layout_height="43dp"
            android:layout_marginBottom="12dp"
            android:text="@string/textAnswer1"
            app:layout_constraintBottom_toTopOf="@+id/answer2text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/answer2text"
            android:layout_width="138dp"
            android:layout_height="43dp"
            android:layout_marginBottom="12dp"
            android:text="@string/textAnswer2"
            app:layout_constraintBottom_toTopOf="@+id/answer3text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/answer4text"
            android:layout_width="138dp"
            android:layout_height="43dp"
            android:layout_marginBottom="24dp"
            android:text="@string/textAnswer4"
            app:layout_constraintBottom_toTopOf="@+id/timerText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/answer1Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@string/pointsDefault"
            app:layout_constraintBottom_toTopOf="@+id/answer2Points"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toEndOf="@+id/answer1text"
            app:layout_constraintTop_toTopOf="@+id/answer1text"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/answer2Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@string/pointsDefault"
            app:layout_constraintBottom_toTopOf="@+id/answer3Points"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toEndOf="@+id/answer2text"
            app:layout_constraintTop_toTopOf="@+id/answer2text"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/answer3Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@string/pointsDefault"
            app:layout_constraintBottom_toTopOf="@+id/answer4Points"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toEndOf="@+id/answer3text"
            app:layout_constraintTop_toTopOf="@+id/answer3text"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/answer4Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@string/pointsDefault"
            app:layout_constraintBottom_toTopOf="@+id/timerText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toEndOf="@+id/answer4text"
            app:layout_constraintTop_toTopOf="@+id/answer4text"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/currentPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/currentPoints"
            app:layout_constraintBottom_toTopOf="@+id/answer1text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.415"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/timerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/timerText"
            app:layout_constraintBottom_toTopOf="@+id/submitAnswerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:layout_width="373dp"
            android:layout_height="263dp"
            app:layout_constraintBottom_toTopOf="@+id/timerText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035">

            <TextView
                android:id="@+id/questionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/questionText"
                android:textSize="24sp" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>